watershed-kernel/tests/compile_fail/wait_done_rejects_kernel_task_state.stderr
error[E0308]: mismatched types
 --> $WORKSPACE/tests/compile_fail/wait_done_rejects_kernel_task_state.rs
  |
  |         outcome: TaskState::Merging,
  |                  ^^^^^^^^^^^^^^^^^^ expected `TaskWaitOutcome`, found `TaskState`
